<resources>
        <string name="dasturSantur">"دستور سنتور\n
مؤلف : استاد فرامرز پایور\n
دستگاه : شور"</string>
    <string name="shiveSanturNavazi">"شیوه سنتور نوازی\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : شور"</string>
    <string name="ebtedaei">"دوره ابتدایی سنتور\n
مؤلف : استاد فرامرز پایور\n
دستگاه : مختلف"</string>
    <string name="pesase">"بیست قطعه برای سنتور\n
مؤلف : استاد پرویز مشکاتیان\n
دستگاه : مختلف"</string>
    <string name="golnar">"گلنار\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : شور"</string>
    <string name="yadegaran_esf">"یادگاران(قسمت اصفهان)\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : اصفهان"</string>
    <string name="yadegaran_hom">"یادگاران(قسمت همایون)\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : همایون"</string>
    <string name="hazarDastan_3gah">"هزاردستان(قسمت سه گاه)\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : سه گاه"</string>
    <string name="hazarDastan_4gah">"هزاردستان(قسمت چهارگاه)\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : چهارگاه"</string>
    <string name="sepideh">"سپیده\n
مؤلف : استاد پشنگ کامکار\n
دستگاه : ماهور"</string>
    <string name="rahnama">راهنما</string>
    <string name="app_name">کوک یار سنتور</string>
    <string name="kharak_1">خرک اول</string>
    <string name="kharak_2">خرک دوم</string>
    <string name="kharak_3">خرک سوم</string>
    <string name="kharak_4">خرک چهارم</string>
    <string name="kharak_5">خرک پنجم</string>
    <string name="kharak_6">خرک ششم</string>
    <string name="kharak_7">خرک هفتم</string>
    <string name="kharak_8">خرک  هشتم</string>
    <string name="kharak_9">خرک  نهم</string>
    <string name="shur">شور</string>
    <string name="esfehan">بیات اصفهان</string>
    <string name="homayun">همایون</string>
    <string name="mahur">ماهور-راست پنجگاه</string>
    <string name="rast">راست پنجگاه</string>
    <string name="segah">سه گاه</string>
    <string name="nava">نوا</string>
    <string name="chahargah">چهارگاه</string>
    <string name="shorRe">شور ر</string>
    <string name="esfehanFa">اصفهان فا</string>
    <string name="faMinor">فا مینور</string>
    <string name="doMinor">دو مینور</string>
    <string name="doMajor">دو ماژور</string>
    <string name="custom">ایجاد کوک دلخواه</string>
    <string name="shurPayver">شور استاد پایور</string>
    <string name="chahargahChap">چهارگاه سل</string>
    <string name="segahChap">سه گاه می کرن</string>
    <string name="HomayunChap">همایون دو</string>
    <string name="MahurChap">ماهور دو</string>
    <string name="sim_zard">زرد</string>
    <string name="sim_sefid">سفید</string>
    <string name="sim_poshKharak">پشت خرک</string>
    <string name="content_1">صدای سنتور</string>
    <string name="content_2">ویژگی ها یک سنتور خوب</string>
    <string name="content_3">بهبود صدای ساز</string>
    <string name="nimParde">نیم پرده پایین کوک شود</string>
    <string name="kharak_1z">خرک اول سیم های زرد</string>
    <string name="kharak_2z">خرک دوم سیم های  زرد</string>
    <string name="kharak_3z">خرک سوم  سیم های زرد</string>
    <string name="kharak_4z">خرک چهارم سیم های زرد</string>
    <string name="kharak_5z">خرک پنجم زرد سیم های زرذ</string>
    <string name="kharak_6z">خرک ششم  سیم های زرد</string>
    <string name="kharak_7z">خرک هفتم  سیم های زرد</string>
    <string name="kharak_8z">خرک  هشتم  سیم های زرد</string>
    <string name="kharak_9z">خرک  نهم  سیم های زرد</string>
    <string name="kharak_1s">خرک اول سیم های سفید</string>
    <string name="kharak_2s">خرک دوم  سیم های سفید</string>
    <string name="kharak_3s">خرک سوم  سیم های سفید</string>
    <string name="kharak_4s">خرک چهارم  سیم های سفید</string>
    <string name="kharak_5s">خرک پنجم سیم های  سفید</string>
    <string name="kharak_6s">خرک ششم  سیم های سفید</string>
    <string name="kharak_7s">خرک هفتم  سیم های سفید</string>
    <string name="kharak_8s">خرک  هشتم  سیم های سفید</string>
    <string name="kharak_9s">خرک  نهم  سیم های سفید</string>
    <string name="kharak_1p">خرک اول  سیم های پشت خرک</string>
    <string name="kharak_2p">خرک دوم  سیم های پشت خرک</string>
    <string name="kharak_3p">خرک سوم  سیم های پشت خرک</string>
    <string name="kharak_4p">خرک چهارم  سیم های پشت خرک</string>
    <string name="kharak_5p">خرک پنجم  سیم های پشت خرک</string>
    <string name="kharak_6p">خرک ششم  سیم های پشت خرک</string>
    <string name="kharak_7p">خرک هفتم  سیم های پشت خرک</string>
    <string name="kharak_8p">خرک  هشتم  سیم های پشت خرک</string>
    <string name="kharak_9p">خرک  نهم  سیم های پشت خرک</string>
    <string name="tuning">تشخیص خودکار سیم</string>
    <string name="koron">کرن</string>
    <string name="bekar">بکار</string>
    <string name="bemol">بمل</string>
    <string name="sori">سری</string>
    <string name="diyez">دیز</string>
    <string name="kook_ok">انجام شد</string>
    <string name="reset">برگشت کوک سیم به حالت پیش فرض</string>
    <string name="setting">تنظیمات</string>
    <string name="edame">ادامه</string>
    <string name="rahnamayeKook">راهنمای کوک</string>
    <string name="rahnamayeKookSantur">راهنمای کوک سنتور</string>
    <string name="kook2Head">آماده شدن برای کوک سنتور :</string>
    <string name="kook3Head">کوک کردن سنتور :</string>
    <string name="kook0">یک سنتور ٩ خرک دارای ٧٢ سیم است که هر ۴ سیم آن (سیم هایی که بر روی هر خرک قرار دارند)باید به صورت یک صدا کوک شود.</string>
    <string name="kook3_5">\nبه همین ترتیب سیم های خرک های دیگر را کوک می کنیم.</string>
    <string name="kook1Head">ابزارهای مورد نیاز برای کوک سنتور:</string>
    <string name="kook1">۱-کلید یا آچار کوک سنتور:\n
که با استفاده از آن گوشی های سنتور یا  پیچ های که در انتهای سیم ها وجود دارد را تنظیم می کنیم\n
۲-مضراب با انتهای(دم) ظریف:\n
اگر به انتهای مضراب  نگاه کنید، می بینید که ظریف و نازک است از این قسمت برای کوک سنتور استفاده می کنیم و به وسیله آن تک تک سیم ها را به ارتعاش در می آوریم.</string>
    <string name="kook3_1"> فرض کنید می خواهیم خرک سوم (سل) سیم های سفید را کوک کنیم.\n
از گوشه ی سمت چپ گزینه سیم های سفید را انتخاب می کنیم :
</string>
    <string name="kook3_2">سپس خرک سوم را انتخاب می نماییم :\n
</string>
    <string name="kook3_3">    \nحال نوبت کوک کردن سیم  ها است، به ترتیب مراحل زیر را دنبال می کنیم :\n
۱-    سیم اول نت خرک سوم (سل) را دنبال می کنیم تا گوشی مورد نظر را پیدا 
کنیم (همیشه پایین ترین گوشی مربوط به سیم اول می باشد و بقیه به  همین ترتیب)
\n\n۲-    با استفاده از کلید کوک، سیم مربوطه را کمی شُل می کنیم ( به طرف خودمان 
می چرخانیم، کمتر از ¼ دور ). این کار به این خاطر است که اگر سیم مورد نظر به
 عللی بالا رفته باشد  آن را دوباره پایین بیاوریم و مطمئن شویم که برای 
کوک، باید سیم را آهسته آهسته  و به نرمی سفت کنیم تا به نت اصلی برسیم. این
 کار احتمال پاره شدن سیم را نیز کم می کند.
\n\n۳-    حال با استفاده از دم مضراب ( که در دست چپ قرار دارد ) سیم اول ( از 
بالا ) خرک سوم را به صدا در می آوریم و به کوک یار نگاه می کنیم. با توجه به پیامی که کوک یار به ما میدهد اقدام به شل کردن یا سفت کردن سیم(کمتر از ۸/۱ دور)می کنیم  و دوباره سیم را به صدا در می آوردیم.\n
</string>
    <string name="kook3_4">\n\n۴-    در این مرحله عقربه کوک یار را به سمت مرکز هدایت می کنیم تا عقربه سبز شود و بر خط سفید مرکز منطبق شود. اگر عقربه سمت چپ بود  گوشی را کمی سفت می کنیم و اگر عقربه سمت راست بود  گوشی را کمی شل می کنیم .تا عقربه مانند شکل زیر در مرکز قرار گیرد.\n</string>
    <string name="kook3_6"> حال سیم اول از خرک سوم (سل) کوک شده است. مابقی سیم های خرک سوم (سل) را نیز به همین ترتیب کوک می نماییم.</string>
    <string name="kook2_comment">        در نوشتن این راهنما، از مقاله ی «استفاده از تیونر برای کوک سنتور» آقای سامان ضرابی استفاده شده است.
</string>
    <string name="kook2">۱-	سنتور را به حالت مایل می چرخانیم بطوری که گوشی های سنتور درست مقابل دست
راستمان باشند تا به آنها کاملاً مسلط باشیم.\n                                          
۲-کوک یار  را باز و بر روی  کوک ساز کلیک کرده و سپس دستگاه مورد نظر جهت کوک شدن را انتخاب می کنیم.\n                                          
۳-کلید کوک سنتور را در دست راست می گیریم.\n
۴- دم مضراب را مطابق شکل زیر، در دست چپ نگه می داریم.\n
</string>
    <string name="changeV14">تغییرات نسخه ۳.۲ </string>
    <string name="changeV14Text">
اضافه شدن بانک نت های سنتور
</string>
    <string name="show">پیام من</string>
    <string name="payamHead">این پیام فقط یک بار نمایش داده خواهد شد لطفا چند دقیقه وقت بگذاريد و این متن را بخوانید : </string>
    <string name="payam">        ضمن تشکر از اینکه نرم افزار کوک یار را انتخاب کردی لازم به ذکر است که.
نرم افزاری که در حال استفاده از آن هستید حاصل بیش از یک سال کار و تحقیق اینجانب در زمینه موسیقی اصیل ایرانی و پردازش صوت است که برای اولین بار در کشور انجام شد..
هدف اصلی از ایجاد نرم افزار کوک یار،فراهم آوردن ابزاری راحت برای کوک کردن سازهای اصیل ایرانی و سازهای رایج غیر ایرانی، بدون نیاز به دانش موسیقی خاص، برای نوازندگان به ویژه نوازندگان مبتدی است.
این نرم افزار تازه منتشر شده و در حال توسعه است و طبیعتاً عاری از خطا و اشتباه نیست بنابراین از شما دوست عزیز خواهشمندم بنده را از نظرات ارزشمندتون جهت هرچه بهتر شدن کوک یار بی بهره نگذارید.
برای راحتی شما بزرگواران، گزینه ارسال نظر به منوی اصلی برنامه قرار داده شده است.
به امید اینکه با این نرم افزار عده ی بیشتری به سمت موسیقی متمایل شوند</string>
    <string name="note_select">نت مورد نظر را انتخاب کنید :</string>
    <string name="TunerHelp">برای کوک کردن ساز پس از انتخاب سیم مورد نظر با استفاده از تیونری که در صفحه مشاهده می شود عمل کوک کردن را انجام می دهیم چنانچه عقربه تیونر در سمت چپ خط سفید وسط باشد باید سیم را در جهت ساعتگرد چرخاند (سفت کرد) تا رنگ عقربه سبز شده و بر روی نوار سفید مرکزی قرار بگیرد در صورتی که عقربه در سمت راست باشد باید سیم را در جهت خلاف عقربه های ساعت چرخاند (شل کرد)
برای تغییر نت خرک اول سیم های زرد بین نت های می و دو می توانید از قسمت تنظیمات، نت مورد نظر را انتخاب کنید.برای کوک کردن ساز بهتر است از خرک نهم سیم های سفید شروع به کوک نمایید بدین ترتیب که اول خرک نهم سیم های سفید سپس خرک نهم سیم های پشت خرک و در آخر نیز خرک نهم سیم های زرد را کوک کنید. برای کوک کردن سیم های پشت خرک ابتدا سیم های سفید را کوک کرده و سپس کوک پشت خرک را چک می کنیم و در صورت کوک نبودن سیم های پشت خرک، خرک سنتور را با مقدار ناپیز جابه جا نمایید تا سیم های پشت خرک نیز کوک بشوند.
</string>
    <string name="help">همین طور که می دانید کوک سنتور در دستگاهای مختلف سلیقه ای است اما کوک هایی که برای سنتور در این نرم افزار  قرار داده شده کوک های آکادمیک هست یعنی کوک هایی که بتوان با آن ها کتاب های شیوه سنتور نوازی، دستور سنتور و ... را اجرا کرد. کوک های مختلف برای اجرای کتاب های مختلف در زیر آورده شده است :\n
\nکوک شور : دستور سنتور، شیوه سنتور نوازی، گلنار، دوره ابتدایی سنتور،  شور و آوازهای شور(ابوعطا، بیات ترک، افشاری و دشتی) و دستگاه نوا ردیف استاد صبا\n 
\nکوک سه گاه : هزاردستان، ردیف سه گاه دوره ابتدایی، ردیف سه گاه استاد صبا\n
\nکوک همایون : یادگاران، ردیف همایون دوره ابتدایی، ردیف همایون استاد صبا\n
\nکوک بیات اصفهان : یادگاران، ردیف اصفهان دوره ابتدایی، ردیف اصفهان استاد صبا\n
\nکوک ماهور : سپیده، ردیف ماهور دوره ابتدایی، ردیف ماهور و راست پنجگاه استاد صبا\n
\nکوک چهارگاه : هزاردستان، ردیف چهارگاه دوره ابتدایی، ردیف چهارگاه استاد صبا
</string>
    <string-array name="posision_array">
        <item>پوزیسیون سوم</item>
        <item>پوزیسیون چهارم</item>
        <item>پوزیسیون پنجم</item>
        <item>پوزیسیون ششم</item>
    </string-array>
    <string-array name="note_array">
        <item>دو</item>
        <item>ر</item>
        <item>می</item>
        <item>فا</item>
        <item>سل</item>
        <item>لا</item>
        <item>سی</item>
    </string-array>
    <string name="bazgasht">بازگشت</string>
</resources>