<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bazgasht"
        android:title="@string/bazgasht"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/help_tuner"
        android:title="@string/rahnama"
        android:icon="@drawable/ic_help"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/change_tempe"
        android:title="@string/rahnama"
        android:icon="@drawable/temp"
        android:orderInCategory="300"
        app:showAsAction="always"/>
    <item
        android:id="@+id/settings_menu"
        android:title="@string/setting"
        android:orderInCategory="400"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>


</menu>