<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/content1"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:background="@drawable/custom"
                android:text="@string/content_1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/content2"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom"
                android:text="@string/content_2"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/content3"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom"
                android:text="@string/content_3"
                android:textColor="@color/white"
                android:textSize="24sp" />


      
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
